--- a/EDA(Global_Terrorism).ipynb
+++ b/EDA(Global_Terrorism).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "EDA(Global Terrorism).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNW7x7BxshDf9TblVlkRske",
+      "authorship_tag": "ABX9TyNkaC+ybCqFrw530bzyHWK5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "id": "P7dZkhEo8al-"
       },
       "source": [
-        "1. Importing required Libraries."
+        " Importing required Libraries."
       ]
     },
     {
@@ -63,7 +63,7 @@
         "import seaborn as sns\n",
         "import folium"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
         "id": "ikrBEWv78qIV"
       },
       "source": [
-        "2. Mounting the given database to drive and reading the .csv file"
+        "Mounting the given database to drive and reading the .csv file"
       ]
     },
     {
@@ -94,7 +94,7 @@
         "data = pd.read_csv(r\"/content/drive/MyDrive/Colab Notebooks/globalterrorismdb_0718dist.csv\",encoding='ISO-8859-1') \n",
         "data.head()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1169,7 +1169,7 @@
         "\n",
         "pd.set_option(\"display.max_columns\",None)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1184,7 +1184,7 @@
       "source": [
         "data.info()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1212,7 +1212,7 @@
       "source": [
         "data.head()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2274,7 +2274,7 @@
         "                       'weaptype1_txt':'Weapon_type','motive':'Motive'},inplace=True)\n",
         "data['Casualities'] = data.Killed + data.Wounded"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2297,7 +2297,7 @@
         "data=data[['Year','Month','Day','Country','state','Region','city','latitude','longitude','AttackType','Killed',\n",
         "               'Wounded','Target','Summary','Group','Target_type','Weapon_type','Motive','Casualities']]"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2313,7 +2313,7 @@
       "source": [
         "data.head()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2539,7 +2539,7 @@
       "source": [
         "data.isnull().sum()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2592,7 +2592,7 @@
         "plt.title('Number Of Terrorist Activities Each Year')\n",
         "plt.show()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2638,7 +2638,7 @@
         "plt.title('Number Of Casualities Each Year')\n",
         "plt.show()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2674,7 +2674,7 @@
         "plt.title('Total Attacks in Each Country / Countries Affected')\n",
         "plt.show()"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2708,7 +2708,7 @@
         "plt.ylabel('Number of Attacks')\n",
         "plt.show()"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2743,7 +2743,7 @@
         "plt.title('Number Of Total Casualities in Each Country')\n",
         "plt.show()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2779,7 +2779,7 @@
         "plt.title('Number Of Total Attacks in Each Region')\n",
         "plt.show()"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2813,7 +2813,7 @@
         "countryKillFormatData = countryKillData.pivot_table(columns='Country', values='Killed', aggfunc='sum')\n",
         "countryKillFormatData"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3394,7 +3394,7 @@
         "plt.title('Number Of Total Attacks by Attack Type')\n",
         "plt.show()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3435,7 +3435,7 @@
         "fig.set_size_inches(16,9)\n",
         "plt.show()"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3467,7 +3467,7 @@
         "group_attacks.columns = ['Terrorist Group', 'Total Attacks']\n",
         "group_attacks"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3626,7 +3626,7 @@
         "plt.title('Number Of Total Attacks by Terrorist Group')\n",
         "plt.show()"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3674,7 +3674,7 @@
         "                   'Taliban'], loc='upper left')\n",
         "plt.show()"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3723,7 +3723,7 @@
         "    folium.Marker(location=[reqFilterDataList[point][1],reqFilterDataList[point][2]], popup = reqFilterDataList[point][0]).add_to(markerCluster)\n",
         "map"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3765,7 +3765,7 @@
         "print('Number of people killed by terror attack:', int(sum(killData.dropna())))\n",
         "# drop the NaN values"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3807,7 +3807,7 @@
         "typeKillFormatData = typeKillData.pivot_table(columns='AttackType', values='Killed', aggfunc='sum')\n",
         "typeKillFormatData"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3925,7 +3925,7 @@
         "# print(fig_size)\n",
         "plt.show()"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
